--- a/build.xml
+++ b/build.xml
@@ -34,7 +34,7 @@
 
   <!--Creates the deployable jar file  -->
   <target name="jar" depends="compile">
-    <jar destfile="output.jar" basedir="${build.dir}">
+	<jar destfile="${env.BUILD_NUMBER}_output.jar" basedir="${build.dir}">
       <manifest>
         <attribute name="Main-Class" value="Rectangulator" />
       </manifest>
